_sass/_blog-post-content.scss
.post-content {
    a {
        text-decoration: none;
        padding: 0 3px;
        color: #fff;
        background-color: #003cda;
        &:hover {
            background-color: #5b88ff;
        }
    }

    h2 {
        font-family: $primary-font;
        font-style: normal;
        font-weight: bold;
        font-size: 32px;
        line-height: 140%;
        color: $primary-color;
        margin-bottom: 20px;
        margin-top: 50px;
        @media screen and (max-width: 580px) {
            font-size: 24px;
        }
    }

    h3 {
        font-family: $primary-font;
        font-style: normal;
        font-weight: bold;
        font-size: 24px;
        line-height: 160%;
        color: $primary-color;
        margin-bottom: 15px;
        margin-top: 35px;

        @media screen and (max-width: 580px) {
            font-size: 20px;
        }
    }

    h4 {
        font-family: $primary-font;
        font-style: normal;
        font-weight: bold;
        font-size: 22px;
        line-height: 150%;
        color: $primary-color;
        margin-bottom: 1;
        margin-top: 30px;
        @media screen and (max-width: 580px) {
            font-size: 18px;
        }
    }

    p {
        font-family: $primary-font;
        font-style: normal;
        font-weight: normal;
        font-size: 18px;
        line-height: 180%;
        color: $primary-color;
        margin-bottom: 20px;

        @media screen and (max-width: 580px) {
            font-size: 13px;
        }
    }

    em {
        font-style: italic;
    }

    b,
    strong {
        font-weight: bold;
    }

    blockquote {
        font-family: $primary-font;
        font-style: italic;
        font-weight: normal;
        font-size: 22px;
        line-height: 180%;

        position: relative;
        padding-top: 20px;
        margin-top: 40px;
        margin-bottom: 20px;
        @media screen and (max-width: 580px) {
            font-size: 18px;
        }

        &:before {
            content: "";
            border-top: 3px solid #33dfcc;
            width: 65px;
            position: absolute;
            top: 0;
        }

        color: #5b88ff;
        p {
            font-family: $primary-font;
            font-style: italic;
            font-weight: normal;
            font-size: 22px;
            line-height: 180%;
            color: #5b88ff;
            @media screen and (max-width: 580px) {
                font-size: 18px;
            }
        }
    }
    ul,
    ol {
        margin-bottom: 20px;
    }
    ul > li {
        font-family: $primary-font;
        font-style: normal;
        font-weight: normal;
        font-size: 18px;
        line-height: 180%;
        color: #000085;
        @media screen and (max-width: 580px) {
            font-size: 13px;
        }
        &:before {
            content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
            color: #33dfcc; /* Change the color */
            font-weight: bold; /* If you want it to be bold */
            display: inline-block; /* Needed to add space between the bullet and the text */
            width: 1em; /* Also needed for space (tweak if needed) */
            margin-right: 10px;
        }
    }

    ol > li {
        counter-increment: li;
        font-family: $primary-font;
        font-style: normal;
        font-weight: normal;
        font-size: 18px;
        line-height: 180%;
        color: #000085;
        @media screen and (max-width: 580px) {
            font-size: 13px;
        }
        &:before {
            content: counter(li) "."; /* Add content: \2022 is the CSS Code/unicode for a bullet */
            color: #33dfcc; /* Change the color */
            font-weight: bold; /* If you want it to be bold */
            display: inline-block; /* Needed to add space between the bullet and the text */
            width: 1em; /* Also needed for space (tweak if needed) */
            margin-right: 10px;
        }
    }

    hr {
        height: 3px;
        background: #33dfcc;
        border: none;
    }

    img {
        max-height: 100%;
        max-width: 100%;
        display: block;
        margin: 30px auto;
        & + em {
            font-style: normal;
            font-weight: normal;
            font-size: 14px;
            line-height: 180%;
            color: #828282;
            @media screen and (max-width: 580px) {
                font-size: 10px;
            }
        }
    }
}

